# Lapis-Sapientiae

./: .gitignore
.claude/: launch.json  settings.local.json
core-agent/: Cargo.toml
core-agent/crates/actions/: Cargo.toml
core-agent/crates/actions/src/: lib.rs
core-agent/crates/common/src/: lib.rs
core-agent/crates/config/: Cargo.toml
core-agent/crates/config/src/: lib.rs
core-agent/crates/executor/: Cargo.toml
core-agent/crates/executor/src/: lib.rs
core-agent/crates/ipc/: Cargo.toml
core-agent/crates/ipc/src/: lib.rs
core-agent/crates/logging/: Cargo.toml
core-agent/crates/logging/src/: lib.rs
core-agent/crates/orchestrator/: Cargo.toml
core-agent/crates/orchestrator/src/: lib.rs
core-agent/crates/perception/: Cargo.toml
core-agent/crates/perception/src/: lib.rs
core-agent/crates/planner/: Cargo.toml
core-agent/crates/planner/src/: lib.rs
core-agent/crates/system-info/: Cargo.toml
core-agent/crates/system-info/src/: lib.rs
core-agent/src/: main.rs
desktop-gui/: App.axaml  App.axaml.cs  LapisGui.csproj  Program.cs  ViewLocator.cs  app.manifest
desktop-gui/IpcClient/: JsonRpcClient.cs
desktop-gui/Services/: AgentService.cs  ProcessManager.cs
desktop-gui/State/: AppState.cs
desktop-gui/ViewModels/: MainWindowViewModel.cs  SettingsViewModel.cs  ViewModelBase.cs
desktop-gui/Views/: MainWindow.axaml  MainWindow.axaml.cs
docs/: ARCHITECTURE.md  README.md  ROADMAP.md  RULES.md
