[workspace]
resolver = "2"
members = [
    "crates/common",
    "crates/logging",
    "crates/config",
    "crates/ipc",
    "crates/actions",
    "crates/system-info",
    "crates/perception",
    "crates/planner",
    "crates/executor",
    "crates/orchestrator",
]

[package]
name = "lapis-core"
version = "0.1.0"
edition = "2021"

[dependencies]
orchestrator = { path = "crates/orchestrator" }
logging = { path = "crates/logging" }
config = { path = "crates/config" }
ipc = { path = "crates/ipc" }
tokio = { version = "1", features = ["full"] }
