[package]
name = "executor"
version = "0.1.0"
edition = "2021"

[dependencies]
common = { path = "../common" }
actions = { path = "../actions" }
planner = { path = "../planner" }
perception = { path = "../perception" }
logging = { path = "../logging" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
