[package]
name = "ipc"
version = "0.1.0"
edition = "2021"

[dependencies]
common = { path = "../common" }
config = { path = "../config" }
orchestrator = { path = "../orchestrator" }
planner = { path = "../planner" }
perception = { path = "../perception" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
