[package]
name = "perception"
version = "0.1.0"
edition = "2021"

[dependencies]
common = { path = "../common" }
xcap = "0.0.13"
image = { version = "0.25", default-features = false, features = ["png"] }
base64 = "0.22"
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt"] }
